--- a/frontend/src/app/components/layout/login/login.component.html
+++ b/frontend/src/app/components/layout/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4"></div>
+
+    <div class="col-lg-4 topo">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title text-center">Autentique-se</h3>
+
+          <mdb-form-control class="mb-4">
+            <input mdbInput type="text" id="usuario" class="form-control" [(ngModel)]="usuario" />
+            <label mdbLabel class="form-label" for="usuario">Usuário</label>
+          </mdb-form-control>
+
+          <mdb-form-control class="mb-4">
+            <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="senha" />
+            <label mdbLabel class="form-label" for="senha">Senha</label>
+          </mdb-form-control>
+
+
+          <div class="d-grid gap-2">
+            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="logar()">Acessar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4"></div>
+  </div>
+</div>
