--- a/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
+++ b/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
@@ -1,1 +1,24 @@
-<p>carrosdetails works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4"></div>
+
+    <div class="col-lg-4">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title text-center">Cadastro de carro</h3>
+
+          <mdb-form-control class="mb-4">
+            <input mdbInput type="text" id="carroNome" class="form-control" [(ngModel)]="carro.nome" />
+            <label mdbLabel class="form-label" for="carroNome">Nome</label>
+          </mdb-form-control>
+
+          <div class="d-grid gap-2">
+            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="save()">Salvar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4"></div>
+  </div>
+</div>
