--- a/frontend/src/app/components/carros/carroslist/carroslist.component.html
+++ b/frontend/src/app/components/carros/carroslist/carroslist.component.html
@@ -3,8 +3,10 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-body">
+          <h3 class="card-title">Listagem de carros</h3>
+
           <div class="d-flex justify-content-end">
-            <button type="button" class="btn btn-primary btn-rounded" mdbRipple routerLink="admin/carros/new">
+            <button type="button" class="btn btn-primary btn-rounded" mdbRipple routerLink="/admin/carros/new">
               Adicionar
             </button>
           </div>
@@ -24,10 +26,10 @@
                 <td>{{item.nome}}</td>
                 <td class="d-flex justify-content-sm-center">
                   <button type="button" class="btn btn-primary btn-rounded" mdbRipple
-                    routerLink="admin/carros/edit/{{item.id}}">
+                    routerLink="/admin/carros/edit/{{item.id}}">
                     Editar
                   </button>
-                  <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="deletar()">
+                  <button type="button" class="btn btn-danger btn-rounded" mdbRipple (click)="deletar(item)">
                     Deletar
                   </button>
                 </td>
