--- a/frontend/src/app/components/marcas/marcasdetails/marcasdetails.component.html
+++ b/frontend/src/app/components/marcas/marcasdetails/marcasdetails.component.html
@@ -1,1 +1,14 @@
-<p>marcasdetails works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <mdb-form-control class="mb-4">
+        <input mdbInput type="text" id="marcaNome" class="form-control" [(ngModel)]="marca.nome" />
+        <label mdbLabel class="form-label" for="marcaNome">Nome</label>
+      </mdb-form-control>
+
+      <div class="d-grid gap-2">
+        <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="save()">Salvar</button>
+      </div>
+    </div>
+  </div>
+</div>
