--- a/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
+++ b/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
@@ -18,6 +18,17 @@
           </mdb-form-control>
 
           <div class="d-grid gap-2">
+            @if (carro.marca == null) {
+            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="buscarMarca()">Buscar
+              Marca</button>
+            }@else {
+            <span>Marca: {{carro.marca.nome}}</span>
+            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="buscarMarca()">Trocar
+              Marca</button>
+            }
+          </div>
+
+          <div class="d-grid gap-2">
             <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="save()">Salvar</button>
           </div>
         </div>
@@ -27,3 +38,13 @@
     <div class="col-lg-4"></div>
   </div>
 </div>
+
+<ng-template #modalMarcaLista>
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">Marca</h5>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
+  </div>
+  <div class="modal-body">
+    <app-marcaslist [enableButton]="true" (retorno)="retornoMarca($event)"></app-marcaslist>
+  </div>
+</ng-template>
