Implementado cadastro de acessório e adicionado vinculo do mesmo no cadastro de carro.

--- a/frontend/src/app/components/acessorio/acessoriosdetails/acessoriosdetails.component.html
+++ b/frontend/src/app/components/acessorio/acessoriosdetails/acessoriosdetails.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-lg-12">
       <mdb-form-control class="mb-4">
-        <input mdbInput type="text" id="marcaNome" class="form-control" [(ngModel)]="marca.nome" />
-        <label mdbLabel class="form-label" for="marcaNome">Nome</label>
+        <input mdbInput type="text" id="acessorioNome" class="form-control" [(ngModel)]="acessorio.nome" />
+        <label mdbLabel class="form-label" for="acessorioNome">Nome</label>
       </mdb-form-control>
 
       <div class="d-grid gap-2">
