--- a/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.scss
+++ b/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.scss
@@ -1,3 +1,15 @@
 .container {
   margin-top: 16px;
 }
+
+.salvar {
+  margin-top: 16px;
+}
+
+.tabela {
+  margin-top: 4px;
+}
+
+.custom-btn-size {
+  width: 180px;
+}
