--- a/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
+++ b/frontend/src/app/components/carros/carrosdetails/carrosdetails.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-4"></div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-12">
       <div class="card">
         <div class="card-body">
           <h3 class="card-title text-center">Cadastro de carro</h3>
@@ -17,19 +17,53 @@
             <label mdbLabel class="form-label" for="carroAno">Ano</label>
           </mdb-form-control>
 
-          <div class="d-grid gap-2">
-            @if (carro.marca == null) {
-            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="buscarMarca()">Buscar
-              Marca</button>
-            }@else {
-            <span>Marca: {{carro.marca.nome}}</span>
-            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="buscarMarca()">Trocar
-              Marca</button>
-            }
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <button *ngIf="!carro.marca" type="button" class="btn btn-warning ms-auto custom-btn-size" mdbRipple
+              (click)="buscarMarca()">
+              Buscar Marca
+            </button>
+            <div *ngIf="carro.marca" class="d-flex w-100 justify-content-between align-items-center">
+              <span class="me-auto">Marca: {{carro.marca.nome}}</span>
+              <button type="button" class="btn btn-warning custom-btn-size" mdbRipple (click)="buscarMarca()">
+                Trocar Marca
+              </button>
+            </div>
           </div>
 
-          <div class="d-grid gap-2">
-            <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="save()">Salvar</button>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button type="button" class="btn btn-warning custom-btn-size" mdbRipple (click)="buscarAcessorio()">
+              Buscar Acessório
+            </button>
+          </div>
+
+          <div>
+            <table class="tabela table align-middle mb-0 bg-white">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Nome</th>
+                  <th style="text-align: center">Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                @for (item of carro.acessorios; track $index) {
+                <tr>
+                  <td>{{item.id}}</td>
+                  <td>{{item.nome}}</td>
+                  <td class="d-flex justify-content-sm-center">
+                    <button type="button" class="btn btn-danger btn-floating" mdbRipple
+                      (click)="desvincularAcessorio(item)">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                }
+              </tbody>
+            </table>
+          </div>
+
+          <div class="salvar d-grid gap-2">
+            <button type="button" class="btn btn-success" mdbRipple (click)="save()">Salvar</button>
           </div>
         </div>
       </div>
@@ -41,10 +75,20 @@
 
 <ng-template #modalMarcaLista>
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Marca</h5>
+    <h5 class="modal-title" id="exampleModalLabel">Marcas</h5>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
   </div>
   <div class="modal-body">
     <app-marcaslist [enableButton]="true" (retorno)="retornoMarca($event)"></app-marcaslist>
+  </div>
+</ng-template>
+
+<ng-template #modalAcessorioLista>
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">Acessórios</h5>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
+  </div>
+  <div class="modal-body">
+    <app-acessorioslist [enableButton]="true" (retorno)="retornoAcessorio($event)"></app-acessorioslist>
   </div>
 </ng-template>
