--- a/frontend/src/app/components/layout/login/login.component.html
+++ b/frontend/src/app/components/layout/login/login.component.html
@@ -13,7 +13,8 @@
           </mdb-form-control>
 
           <mdb-form-control class="mb-4">
-            <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="senha" />
+            <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="senha"
+              (keyup.enter)="logar()" />
             <label mdbLabel class="form-label" for="senha">Senha</label>
           </mdb-form-control>
 
