--- a/frontend/src/app/components/layout/menu/menu.component.html
+++ b/frontend/src/app/components/layout/menu/menu.component.html
@@ -21,7 +21,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="admin/marcas">Marcas</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link active" href="admin/acessorios">Acessórios</a>
+        </li>
       </ul>
       <!-- Left links -->
 
