--- a/frontend/src/app/components/layout/login/login.component.html
+++ b/frontend/src/app/components/layout/login/login.component.html
@@ -8,12 +8,12 @@
           <h3 class="card-title text-center">Autentique-se</h3>
 
           <mdb-form-control class="mb-4">
-            <input mdbInput type="text" id="usuario" class="form-control" [(ngModel)]="usuario" />
+            <input mdbInput type="text" id="usuario" class="form-control" [(ngModel)]="login.username" />
             <label mdbLabel class="form-label" for="usuario">Usuário</label>
           </mdb-form-control>
 
           <mdb-form-control class="mb-4">
-            <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="senha"
+            <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="login.password"
               (keyup.enter)="logar()" />
             <label mdbLabel class="form-label" for="senha">Senha</label>
           </mdb-form-control>
