--- a/frontend/src/app/components/layout/menu/menu.component.html
+++ b/frontend/src/app/components/layout/menu/menu.component.html
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="/">CRUD</a>
+    <a class="navbar-brand" href="/">{{usuario.username}}</a>
 
     <!-- Toggle button -->
     <button class="navbar-toggler" type="button" (click)="basicNavbar.toggle()" aria-expanded="false"
@@ -15,15 +15,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        @if (loginService.hasPermission("ADMIN")) {
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="admin/carros">Carros</a>
         </li>
+        }
+
+        @if (loginService.hasPermission("ADMIN") || loginService.hasPermission("COMUM")) {
         <li class="nav-item">
           <a class="nav-link active" href="admin/marcas">Marcas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="admin/acessorios">Acessórios</a>
         </li>
+        }
       </ul>
       <!-- Left links -->
 
